--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 body {
     background-color: #111111;
+    background-color: #111111;
+    background-color: #111111;
+    background-color: #111111;
 }
