--- a/style.css
+++ b/style.css
@@ -3,4 +3,7 @@ body {
     background-color: #111111;
     background-color: #111111;
     background-color: #111111;
+    background-color: #111111;
+    background-color: #111111;
+    background-color: #111111;
 }
